typescript/checker/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            339,
        ),
        hi: BytePos(
            340,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads.ts:22:5
   |
22 | var b: B<boolean>;
   |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            364,
        ),
        hi: BytePos(
            368,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads.ts:23:10
   |
23 | var r = b.foo(true); // returns Date
   |          ^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            574,
        ),
        hi: BytePos(
            575,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads.ts:35:5
   |
35 | var c: C<boolean, Date>;
   |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            606,
        ),
        hi: BytePos(
            610,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads.ts:36:11
   |
36 | var r2 = c.foo(1, 2); // number
   |           ^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            814,
        ),
        hi: BytePos(
            815,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads.ts:49:5
   |
49 | var d: D<boolean, Date>;
   |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            846,
        ),
        hi: BytePos(
            850,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/declarationMerging/twoMergedInterfacesWithDifferingOverloads.ts:50:11
   |
50 | var r3 = d.foo(1, 1); // boolean, last definition wins
   |           ^^^^

